--- a/index.html
+++ b/index.html
@@ -1,30 +1,12 @@
 <!doctype html>
-<html lang="en" ng-app="portfolio">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Audrey V Nelson</title>
 		
-		<!--External Scripts-->
-		
-		<!--Angular-Dependent Scripts-->
-		<script src="./scripts/app.js"></script>
-		<script src="./scripts/controllers/genericController.js"></script>
-		
-		<!--Object Scripts-->
-		
-		
-		<!--Data Scripts -->
-		
-		
-		
-		<!--Utility Scripts-->
-		
-		
-		<!--Style-->
-		
 	</head>
 
-	<body ng-controller="TestCtrl">
-		<div ng-view id="theView"></div>
+	<body>
+	Hello World
 	</body>
 </html>
