--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Audrey V Nelson</title>
-		
-	</head>
+<!DOCTYPE html>
+<html>
 
-	<body>
-	Hello World
-	</body>
+<head>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+</head>
+
+<body>
+
+<div ng-app="">
+ 
+<p>Input something in the input box:</p>
+<p>Name: <input type="text" ng-model="name" value="John"></p>
+<p ng-bind="name"></p>
+
+</div>
+
+</body>
 </html>
