--- a/index.html
+++ b/index.html
@@ -13,21 +13,17 @@
  
 <p>Input something in the input box:</p>
 <p>Name: <input type="text" ng-model="name" value="John"></p>
-
-<script>
-	var projects = getProjectData();
-</script>
-
-<div id="projectList"> 
-		<ul>
-			<li ng-repeat="project in projects">
-				<a>{{tab.name}}</a>
-			</li>
-		</ul>
-	</div>
-
 <p ng-bind="name"></p>
 
+</div>
+
+<div data-ng-app="" data-ng-init="names=['Jani','Hege','Kai']">
+  <p>Looping with ng-repeat:</p>
+  <ul>
+    <li data-ng-repeat="x in names">
+      {{ x }}
+    </li>
+  </ul>
 </div>
 
 </body>
