--- a/index.html
+++ b/index.html
@@ -7,28 +7,21 @@
 <script src="./scripts/projects.js"></script>
 </head>
 
-<body onload="getProjects()">
+<body>
 
-<script>
-	var projects = getProjectData();
-	
-	function getProjectData() {
-		var projects = ['1','2','4'];
-		return projects;
-	}
-</script>
 
-<div data-ng-app="" data-ng-init="names=['Jani','Hege','Kai']">
-  <p>Looping with ng-repeat:</p>
-  <ul>
-    <li data-ng-repeat="x in projects">
-      {{ x }}
-    </li>
-  </ul>
-  
-  	<p>Input something in the input box:</p>
-	<p>Name: <input type="text" ng-model="name" value="John"></p>
-	<p ng-bind="name"></p>
+
+<div ng-app="" ng-init="projects=[
+{name:'Project 1',code:'Norway'},
+{name:'Project 2',code:'Sweden'},
+{name:'Project 3',code:'Denmark'}]">
+
+<p>Looping with objects:</p>
+<ul>
+  <li ng-repeat="x in projects">
+  {{ x.name + ', ' + x.code }}</li>
+</ul>
+
 </div>
 
 </body>
