--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<script src="./scripts/projects.js"></script>
 	
 	<title>Audrey V Nelson</title>
+	
+	<div id="titleHead" class="titleHead">
+		<h1>Audrey V Nelson</h1>
+	</div>
 </head>
 
 <body>
@@ -14,9 +18,9 @@
 
 
 	<div ng-app="" ng-init="projects=[
-		{name:'Project 1',code:'Norway'},
-		{name:'Project 2',code:'Sweden'},
-		{name:'Project 3',code:'Denmark'}]">
+		{name:'Project 1',code:'wow'},
+		{name:'Project 2',code:'such cool'},
+		{name:'Project 3',code:'much code'}]">
 
 		<p>Looping with objects:</p>
 		<ul>
