--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<!--scripts-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-	<script src="myPage.css"></script>
+	<script src="./myPage.css"></script>
 	
 	<title>Audrey V Nelson</title>
 	
