--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 		{name:'Project 2',code:'such cool',video:'Coons3Dvideo2.mp4'},
 		{name:'Project 3',code:'much code',video:'Coons3Dvideo2.mp4'}]">
 
-		<p>Looping with objects:</p>
+		<p><br><br>Looping with objects:</p>
 		<ul>
 			<li ng-repeat="x in projects">
 			{{ x.name + ', ' + x.code }}
+			<br>
 			<video controls="controls" width="800" height="600" name="Video Name" src={{x.video}}></video>
+			<br><br>
 			</li>
 		</ul>
 		
