--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
 
 	<div ng-app="" ng-init="projects=[
-		{name:'Project 1',code:'wow', video:'Coons3Dvideo2.mp4'},
+		{name:'Project 1',code:'wow', video:'VertexFragmentShaders.mp4'},
 		{name:'Project 2',code:'such cool',video:'Coons3Dvideo2.mp4'},
-		{name:'Project 3',code:'much code',video:'Coons3Dvideo2.mp4'}]">
+		{name:'Project 3',code:'much code',video:'CoonsPatchVideo.mp4'}
+		{name:'Project 4',code:'much code',video:'CS3451_P02.mp4'}
+		]">
 
 		<p><br><br>Looping with objects:</p>
 		<ul>
