--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 
 	<div ng-app="" ng-init="projects=[
-		{name:'Project 1',code:'wow', video:'VertexFragmentShaders.mp4'},
-		{name:'Project 2',code:'such cool',video:'Coons3Dvideo2.mp4'},
-		{name:'Project 3',code:'much code',video:'CoonsPatchVideo.mp4'},
-		{name:'Project 4',code:'much code',video:'CS3451_P02.mp4'}
+		{name:'Vertex and Fragment Shaders',code:'wow', video:'VertexFragmentShaders.mp4'},
+		{name:'3D Coons Patch Interpolation',code:'such cool',video:'Coons3Dvideo2.mp4'},
+		{name:'2D Coons Patch Interpolation',code:'much code',video:'CoonsPatchVideo.mp4'},
+		{name:'Predicting Motion',code:'much code',video:'CS3451_P02.mp4'}
 		]">
 
-		<p><br><br>Looping with objects:</p>
+		
 		<ul>
 			<li ng-repeat="x in projects">
 			{{ x.name + ', ' + x.code }}
