--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 		<p><br><br> </p>
 		<ul>
-			<li ng-repeat="x in projects">
+			<p ng-repeat="x in projects">
 			{{ x.name + ', ' + x.code }}
-			<br>
+			<br><br>
 			<video controls="controls" width="800" height="600" name="Video Name" src={{x.video}}></video>
 			<br><br>
-			</li>
+			</p>
 		</ul>
 		
 		
