--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
 
 
 	<div ng-app="" ng-init="projects=[
-		{name:'Vertex and Fragment Shaders',code:'wow', video:'VertexFragmentShaders.mp4',
-		language: 'idk', description: 'lots of text'},
-		{name:'3D Coons Patch Interpolation',code:'such cool',video:'Coons3Dvideo2.mp4',
-		language: 'Processing', description: 'blah'},
-		{name:'2D Coons Patch Interpolation',code:'much code',video:'CoonsPatchVideo.mp4',
-		language: 'Processing', description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
-		{name:'Predicting Motion',code:'much code',video:'CS3451_P02.mp4',
-		language: 'Processing', description: 'blah'}
+		{name:'Vertex and Fragment Shaders',code:'wow', video:'VertexFragmentShaders.mp4',language: 'idk', description: 'lots of text'},
+		{name:'3D Coons Patch Interpolation',code:'such cool',video:'Coons3Dvideo2.mp4',language: 'Processing', description: 'blah'},
+		{name:'2D Coons Patch Interpolation',code:'much code',video:'CoonsPatchVideo.mp4',language: 'Processing', description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
+		{name:'Predicting Motion',code:'much code',video:'CS3451_P02.mp4',language: 'Processing', description: 'blah'}
 		]">
 
 		<p><br><br> </p>
