--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			<p ng-repeat="x in projects">
 			{{ x.name }}
 			<br>
-			<li>Coded using: {{x.language}}</li>
-			<li>View code: {{x.code}}</li>
-			{{x.description}}
+			<!--<li>Coded using: {{x.language}}</li>-->
+			<!--<li>View code: {{x.code}}</li>-->
+			<!--{{x.description}}-->
 			<br><br>
 			<video controls="controls" width="800" height="600" name="Video Name" src={{x.video}}></video>
 			<br><br>
