--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		
 			<p ng-repeat="x in projects">
 			{{ x.name }}
-			<br>
-			Coded using: {{x.language}}
+			<br><br>
+			Coded using: {{x.language}}<br>
 			View code: {{x.code}}
 			
 			{{x.description}}
