--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		<p><br><br> </p>
 		
 			<p ng-repeat="x in projects">
-			{{ x.name }}
+			<h2>{{ x.name }}</h2>
 			<br><br>
 			Coded using: {{x.language}}<br>
-			View code: {{x.code}}
+			View code: {{x.code}}<br>
 			
 			{{x.description}}
 			<br><br>
