--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 			<div ng-repeat="x in projects">
 			<h2>{{ x.name }}</h2>
 			<p>
-			<br><br>
-			Coded using: {{x.language}}<br>
-			View code: {{x.code}}<br>
+			<br>
+			<b>Coded using: </b>{{x.language}}<br>
+			<b>View code: </b>{{x.code}}<br>
 			
 			{{x.description}}
 			<br><br>
