adding Frozen game

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', description: 'blah'},
 		{name:'2D Coons Patch Interpolation',code:'much code',video:'CoonsPatchVideo.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
+		{name:'Frozen Game for GameBoy Advance',code:'much code',video:'FrozenGame.mp4',
+			language: 'C', author:'Audrey Nelson', description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
 		{name:'Predicting Motion',code:'much code',video:'CS3451_P02.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', description: 'blah'}
 		]">
