--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<p><br><br> </p>
 		
-			<div ng-repeat="x in projects">
+			<div id="project" class="project" ng-repeat="x in projects">
 			<h2>{{ x.name }}</h2>
 			<p>
 				<b>Coded using: </b>{{x.language}}<br>
