--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<p><br><br> </p>
 		
 			<div id="project" class="project" ng-repeat="x in projects">
-			<p><br></p>
+			<div id="hack" class="hack"></div>
 			<h2>{{ x.name }}</h2>
 			<p>
 				<b>Coded using: </b>{{x.language}}<br>
