--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
 	<div ng-app="" ng-init="projects=[
 		{name:'Vertex and Fragment Shaders',code:'wow', video:'VertexFragmentShaders.mp4',
-			language: 'OpenGL, GPU', author:'Audrey Nelson', 
+			language: 'OpenGL, GPU', author:'Audrey Nelson', pdf: 'VertexFragmentShaders.pdf',
 			description: 'lots of text'},
 		{name:'3D Coons Patch Interpolation',code:'such cool',video:'Coons3Dvideo2.mp4',
-			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', 
+			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
 			description: 'blah'},
 		{name:'2D Coons Patch Interpolation',code:'much code',video:'CoonsPatchVideo.mp4',
-			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', 
+			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
 			description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
 		{name:'Frozen Game for GameBoy Advance',code:'much code',video:'FrozenGame.mp4',
-			language: 'C', author:'Audrey Nelson', 
+			language: 'C', author:'Audrey Nelson', pdf: 'VertexFragmentShaders.pdf',
 			description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
 		{name:'Predicting Motion',code:'much code',video:'CS3451_P02.mp4',
-			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', 
+			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
 			description: 'blah'}
 		]">
 
@@ -45,7 +45,7 @@
 				<b>Coded using: </b>{{x.language}}<br>
 				<b>Author(s): </b>{{x.author}}<br>
 				<b>View code: </b>{{x.code}}<br>
-				<a href="VertexFragmentShaders.pdf">Click here to download the PDF!</a>
+				<a href={{pdf}}>Click to view full write up.</a>
 			
 				{{x.description}}
 				<br><br>
