--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<b>Coded using: </b>{{x.language}}<br>
 				<b>Author(s): </b>{{x.author}}<br>
 				<b>View code: </b>{{x.code}}<br>
-				<a href={{pdf}}>Click to view full write up.</a>
+				<a href={{x.pdf}}>Click to view full write up.</a>
 			
 				{{x.description}}
 				<br><br>
