--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 
 	<div ng-app="" ng-init="projects=[
-		{name:'Vertex and Fragment Shaders',code:'wow', video:'VertexFragmentShaders.mp4',
+		{name:'Vertex and Fragment Shaders',code:'wow', video:'videos/VertexFragmentShaders.mp4',
 			language: 'OpenGL, GPU', author:'Audrey Nelson', pdf: 'VertexFragmentShaders.pdf',
 			description: 'lots of text'},
-		{name:'3D Coons Patch Interpolation',code:'such cool',video:'Coons3Dvideo2.mp4',
+		{name:'3D Coons Patch Interpolation',code:'such cool',video:'videos/Coons3Dvideo2.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
 			description: 'blah'},
-		{name:'2D Coons Patch Interpolation',code:'much code',video:'CoonsPatchVideo.mp4',
+		{name:'2D Coons Patch Interpolation',code:'much code',video:'videos/CoonsPatchVideo.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
 			description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
-		{name:'Frozen Game for GameBoy Advance',code:'much code',video:'FrozenGame.mp4',
+		{name:'Frozen Game for GameBoy Advance',code:'much code',video:'videos/FrozenGame.mp4',
 			language: 'C', author:'Audrey Nelson', pdf: 'VertexFragmentShaders.pdf',
 			description: 'need to see what a whoooooooole looooooooooooot of text is going to look like in this section. Will it show up as a nice paragraph? I hope it looks nice without me having to do a whole bunch of time consuming formatting. Please fit on the page.'},
-		{name:'Predicting Motion',code:'much code',video:'CS3451_P02.mp4',
+		{name:'Predicting Motion',code:'much code',video:'videos/CS3451_P02.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
 			description: 'blah'}
 		]">
