--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 	<div ng-app="" ng-init="projects=[
 		{name:'Vertex and Fragment Shaders',code:'wow', video:'videos/VertexFragmentShaders.mp4',
-			language: 'OpenGL, GPU', author:'Audrey Nelson', pdf: 'VertexFragmentShaders.pdf',
+			language: 'OpenGL, GPU', author:'Audrey Nelson', pdf: '<a href='pdfs/VertexFragmentShaders.pdf'>Click to view full write up.</a>',
 			description: 'lots of text'},
 		{name:'3D Coons Patch Interpolation',code:'such cool',video:'videos/Coons3Dvideo2.mp4',
-			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
+			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'pdfs/none',
 			description: 'blah'},
 		{name:'2D Coons Patch Interpolation',code:'much code',video:'videos/CoonsPatchVideo.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'VertexFragmentShaders.pdf',
@@ -45,8 +45,8 @@
 				<b>Coded using: </b>{{x.language}}<br>
 				<b>Author(s): </b>{{x.author}}<br>
 				<b>View code: </b>{{x.code}}<br>
-				<a href={{x.pdf}}>Click to view full write up.</a>
-			
+				
+				{{x.pdf}}
 				{{x.description}}
 				<br><br>
 				<video controls="controls" width="800" height="600" name="Video Name" src={{x.video}}></video>
