adding code links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		{name:'3D Coons Patch Interpolation',code:'such cool',video:'videos/Coons3Dvideo2.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'pdfs/none',
 			description: ''},
-		{name:'2D Coons Patch Interpolation',code:'much code',video:'videos/CoonsPatchVideo.mp4',
+		{name:'2D Coons Patch Interpolation',code:'https://github.com/audreyvnelson-portfolio/2D-CoonsPatch',video:'videos/CoonsPatchVideo.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'pdfs/2DcoonsPatch.pdf',
 			description: ''},
 		{name:'Frozen Game for GameBoy Advance',code:'much code',video:'videos/FrozenGame.mp4',
@@ -44,8 +44,8 @@
 			<p>
 				<b>Coded using: </b>{{x.language}}<br>
 				<b>Author(s): </b>{{x.author}}<br>
-				<b>View code: </b>{{x.code}}<br>
-				<a href={{x.pdf}}>Click to view full write up.</a>
+				<b>View code: </b><a href={{x.code}}>Click Here.</a><br>
+				<a href={{x.pdf}}><b>View Writeup</b></a>
 			
 				{{x.description}}
 				<br><br>
