--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			<div id="hack" class="hack"></div>
 			<h2>{{ x.name }}</h2>
 			<p>
-				<b>Coded using: </b>{{x.language}}<br>
+				<b>Coded Using: </b>{{x.language}}<br>
 				<b>Author(s): </b>{{x.author}}<br>
-				<b>View code: </b><a href={{x.code}}>Click Here.</a><br>
+				<a href={{x.code}}><b>View Code</b></a><br>
 				<a href={{x.pdf}}><b>View Writeup</b></a>
 			
 				{{x.description}}
