adding all code links

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 
 	<div ng-app="" ng-init="projects=[
-		{name:'Vertex and Fragment Shaders',code:'wow', video:'videos/VertexFragmentShaders.mp4',
+		{name:'Vertex and Fragment Shaders',code:'https://github.com/audreyvnelson-portfolio/VertexFragmentShaders', video:'videos/VertexFragmentShaders.mp4',
 			language: 'OpenGL, GPU', author:'Audrey Nelson', pdf: 'pdfs/VertexFragmentShaders.pdf',
 			description: ''},
-		{name:'3D Coons Patch Interpolation',code:'such cool',video:'videos/Coons3Dvideo2.mp4',
+		{name:'3D Coons Patch Interpolation',code:'https://github.com/audreyvnelson-portfolio/3D-CoonsPatch',video:'videos/Coons3Dvideo2.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'pdfs/none',
 			description: ''},
 		{name:'2D Coons Patch Interpolation',code:'https://github.com/audreyvnelson-portfolio/2D-CoonsPatch',video:'videos/CoonsPatchVideo.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'pdfs/2DcoonsPatch.pdf',
 			description: ''},
-		{name:'Frozen Game for GameBoy Advance',code:'much code',video:'videos/FrozenGame.mp4',
+		{name:'Frozen(TM) Game for GameBoy Advance',code:'https://github.com/audreyvnelson-portfolio/FrozenGame',video:'videos/FrozenGame.mp4',
 			language: 'C', author:'Audrey Nelson', pdf: 'pdfs/none',
 			description: ''},
-		{name:'Predicting Motion',code:'much code',video:'videos/CS3451_P02.mp4',
+		{name:'Predicting Motion',code:'https://github.com/audreyvnelson-portfolio/PredictingMotion',video:'videos/CS3451_P02.mp4',
 			language: 'Processing', author:'Audrey Nelson and Prof. Jarek Rossignac', pdf: 'pdfs/none',
 			description: ''}
 		]">
@@ -45,7 +45,7 @@
 				<b>Coded Using: </b>{{x.language}}<br>
 				<b>Author(s): </b>{{x.author}}<br>
 				<a href={{x.pdf}}><b>View Writeup</b></a><br>
-				<a href={{x.code}}><b>View Code</b></a><br>
+				<a href={{x.code}}><b>View Code</b></a>
 			
 				{{x.description}}
 				<br><br>
