--- a/newPage.html
+++ b/newPage.html
@@ -8,7 +8,7 @@
 	
 	<title>Audrey V Nelson</title>
 	
-	<div id="titleHead" class="titleHead" background="grass.jpg">
+	<div id="titleHead" class="titleHead">
 		<h1>Audrey V Nelson</h1>
 	</div>
 	<br><br>
