--- a/newPage.html
+++ b/newPage.html
@@ -16,8 +16,10 @@
 
 <body>
 
-
-
+	<div id="project1" class="grid_element"> test1 </div>
+	<div id="project2" class="grid_element"> test2 </div>
+	<div id="project3" class="grid_element"> test3 </div>
+	<div id="project4" class="grid_element"> test4 </div>
 	
 
 </body>
