--- a/newPage.html
+++ b/newPage.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+	<div id="aboutProjects" class="about"> stuff</div>
 	<div id="project1" class="grid_element"> test1 </div>
 	<div id="project2" class="grid_element"> test2 </div>
 	<div id="project3" class="grid_element"> test3 </div>
