testing layout of projects

--- a/newPage.html
+++ b/newPage.html
@@ -16,10 +16,19 @@
 
 <body>
 	<div id="aboutProjects" class="about"> stuff</div>
+	
 	<div id="project1" class="grid_element"> test1 </div>
 	<div id="project2" class="grid_element"> test2 </div>
 	<div id="project3" class="grid_element"> test3 </div>
 	<div id="project4" class="grid_element"> test4 </div>
+	<div id="project5" class="grid_element"> test5 </div>
+	<div id="project6" class="grid_element"> test6 </div>
+	<div id="project7" class="grid_element"> test7 </div>
+	<div id="project8" class="grid_element"> test8 </div>
+	<div id="project9" class="grid_element"> test9 </div>
+	<div id="project10" class="grid_element"> test9 </div>
+	<div id="project11" class="grid_element"> test9 </div>
+	<div id="project12" class="grid_element"> test9 </div>
 	
 
 </body>
