--- a/newPage.html
+++ b/newPage.html
@@ -17,6 +17,8 @@
 <body>
 	<div id="aboutProjects" class="about"> stuff</div>
 	
+	<div id="projects" class="projectHolder">
+	
 	<div id="project1" class="grid_element"> test1 </div>
 	<div id="project2" class="grid_element"> test2 </div>
 	<div id="project3" class="grid_element"> test3 </div>
@@ -30,6 +32,7 @@
 	<div id="project11" class="grid_element"> test9 </div>
 	<div id="project12" class="grid_element"> test9 </div>
 	
+	</div>
 
 </body>
 </html>
