--- a/newPage.html
+++ b/newPage.html
@@ -19,7 +19,7 @@
 	
 	<div id="projects" class="projectHolder">
 	
-	<div id="project1" class="grid_element"> test1 </div>
+	<div id="project1" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
 	<div id="project2" class="grid_element"> test2 </div>
 	<div id="project3" class="grid_element"> test3 </div>
 	<div id="project4" class="grid_element"> test4 </div>
