--- a/newPage.html
+++ b/newPage.html
@@ -20,9 +20,9 @@
 	<div id="projects" class="projectHolder">
 	
 	<div id="project1" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
-	<div id="project2" class="grid_element"> test2 </div>
-	<div id="project3" class="grid_element"> test3 </div>
-	<div id="project4" class="grid_element"> test4 </div>
+	<div id="project2" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
+	<div id="project3" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
+	<div id="project4" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
 	<div id="project5" class="grid_element"> test5 </div>
 	<div id="project6" class="grid_element"> test6 </div>
 	<div id="project7" class="grid_element"> test7 </div>
