testing hover text

--- a/newPage.html
+++ b/newPage.html
@@ -19,7 +19,10 @@
 	
 	<div id="projects" class="projectHolder">
 	
-	<div id="project1" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
+	<div id="project1" class="grid_element"> 
+		<img src="Picture10.png" alt="picture" height="100%" width="100%"> 
+		<div class="text">testing the hover feature</div>
+	</div>
 	<div id="project2" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
 	<div id="project3" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
 	<div id="project4" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
