--- a/newPage.html
+++ b/newPage.html
@@ -20,7 +20,7 @@
 	<div id="projects" class="projectHolder">
 	
 	<div id="project1" class="grid_element"> 
-		<div class="text">testing the hover feature</div>
+		<p class="text">testing the hover feature</p>
 		<img src="Picture10.png" alt="picture" height="100%" width="100%"> 
 		
 	</div>
