--- a/newPage.html
+++ b/newPage.html
@@ -20,6 +20,7 @@
 	<div id="projects" class="projectHolder">
 	
 	<div id="project1" class="grid_element"> 
+		<img src="Picture10.png" alt="picture" height="100%" width="100%">
 		<div class="text">testing the hover feature</div>
 	</div>
 	<div id="project2" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
