--- a/newPage.html
+++ b/newPage.html
@@ -23,7 +23,7 @@
 		<img src="Picture10.png" alt="picture" height="100%" width="100%">
 		<!--<div class="text">testing the hover feature</div> -->
 	</div>
-	<div id="description1" class="description" display="none"> TESTING HIDDEN FEATURE</div>
+	<div id="description1" class="description" style="display:none"> TESTING HIDDEN FEATURE</div>
 	<div id="project2" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
 	<div id="project3" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
 	<div id="project4" class="grid_element"> <img src="Picture10.png" alt="picture" height="100%" width="100%"> </div>
