testing expand method

--- a/newPage.html
+++ b/newPage.html
@@ -19,7 +19,7 @@
 	
 	<div id="projects" class="projectHolder">
 	
-	<div id="project1" class="grid_element"> 
+	<div id="project1" class="grid_element" onclick="expand('project', 1)"> 
 		<img src="Picture10.png" alt="picture" height="100%" width="100%">
 		<!--<div class="text">testing the hover feature</div> -->
 	</div>
