--- a/newPage.html
+++ b/newPage.html
@@ -4,7 +4,7 @@
 <head>
 	<!--scripts-->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-	<script src="./scripts/utilities/expanding.js"></script>
+	<script src="expanding.js"></script>
 	<link rel="stylesheet" type="text/css" href="./newPage.css">
 	
 	<title>Audrey V Nelson</title>
